fix(jvm): 卷四全卷与卷五收尾改回 handbook 12 步骨架（11 话）
涵盖 11 话，jvm 线格式改造收官：
- f02e04 贪婪的正则（卷二补漏）
- f03e05 更快的镜子（卷三终章）
- f04e01–f04e07 并发新纪元篇全卷
- f05e04 瘦身与抢跑、f05e05 炉火向明天（全剧终）

每话统一：frontmatter 规范化、H1 + 元信息引用块、漫画分格入
[!文字版]、12 步骨架、项目检查点版本链、规范署名行。
技术内容零改动。

f05e05 全剧终特殊处理：
- 元叙事结构（讲能力状态分层，非具体 API 实现）
- 三层金字塔：稳定层（FFM/Scoped Values）、孵化层（Vector API/
  Structured Concurrency）、研究层（Valhalla Value Classes）
- 修复文件 BOM 与中文引号导致的 frontmatter 解析失败
- 注册表 title 补「（全剧终）」后缀

f04e07 修复：删除 279 行 fence 外重复代码、修正 bash 注释被
误判为 H1、补齐围栏配对。

进度: 28/30 篇草稿完全合规，剩 2 篇仅篇幅警告（19k 字符技术
实录，与 f05e01 的 13.8k 同类，非结构问题）
验收: 138/138 测试通过

Co-Authored-By: Claude <noreply@anthropic.com>